feat(*):设置Icon 启动页视图，首页补充登录及访问主页跳转按钮

--- a/SocialCommunity/SocialCommunity/Launch/Base.lproj/OpeningVC.storyboard
+++ b/SocialCommunity/SocialCommunity/Launch/Base.lproj/OpeningVC.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dti-PE-dy7">
-                                <rect key="frame" x="8" y="119" width="377" height="377"/>
+                                <rect key="frame" x="8" y="228" width="377" height="377"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="dti-PE-dy7" secondAttribute="height" multiplier="1:1" priority="750" id="70d-pn-mgY"/>
@@ -32,25 +32,66 @@
                                 </collectionViewFlowLayout>
                             </collectionView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="LIv-oY-mgf">
-                                <rect key="frame" x="138.66666666666666" y="504" width="115.66666666666666" height="10"/>
+                                <rect key="frame" x="138.66666666666666" y="613" width="115.66666666666666" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="10" id="bqG-rh-5m2"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="10" id="jGo-kW-F49"/>
                                 </constraints>
                             </pageControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4y4-Wi-5c1">
+                                <rect key="frame" x="61.666666666666657" y="783" width="270" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="BP7-d4-7Jd"/>
+                                    <constraint firstAttribute="width" constant="270" id="g79-A8-Rke"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="github"/>
+                                <connections>
+                                    <action selector="visitMyHost:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xBD-LZ-DIe"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZM-fq-Bhz">
+                                <rect key="frame" x="235" y="198" width="150" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="5re-Q8-BQa"/>
+                                    <constraint firstAttribute="width" constant="150" id="OWN-1c-tni"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sdk-oC-6qO">
+                                <rect key="frame" x="61.666666666666657" y="683" width="270" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="jSn-Cn-PuH"/>
+                                    <constraint firstAttribute="width" constant="270" id="w2u-Kk-DEn"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="LoginIn"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                         <constraints>
-                            <constraint firstItem="dti-PE-dy7" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="60" id="auV-To-SYX"/>
+                            <constraint firstItem="dti-PE-dy7" firstAttribute="top" secondItem="VZM-fq-Bhz" secondAttribute="bottom" constant="10" id="CGK-4a-yLo"/>
+                            <constraint firstItem="Sdk-oC-6qO" firstAttribute="top" secondItem="LIv-oY-mgf" secondAttribute="bottom" priority="250" constant="60" id="GR9-BV-5k8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="4y4-Wi-5c1" secondAttribute="bottom" constant="10" id="Mzn-NP-buu"/>
+                            <constraint firstItem="4y4-Wi-5c1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="NVG-sH-S7W"/>
+                            <constraint firstItem="Sdk-oC-6qO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="V8Y-Db-MZi"/>
                             <constraint firstItem="dti-PE-dy7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="hvt-hN-DeK"/>
                             <constraint firstItem="dti-PE-dy7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jaU-8S-JYF"/>
+                            <constraint firstItem="Sdk-oC-6qO" firstAttribute="top" relation="greaterThanOrEqual" secondItem="LIv-oY-mgf" secondAttribute="bottom" constant="8" id="n5q-RO-CZk"/>
+                            <constraint firstItem="4y4-Wi-5c1" firstAttribute="top" secondItem="Sdk-oC-6qO" secondAttribute="bottom" constant="60" id="ppX-70-vth"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VZM-fq-Bhz" secondAttribute="trailing" constant="8" id="qGp-nD-Dgo"/>
                             <constraint firstItem="LIv-oY-mgf" firstAttribute="top" secondItem="dti-PE-dy7" secondAttribute="bottom" constant="8" id="u3r-ep-NZT"/>
                             <constraint firstItem="LIv-oY-mgf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xuU-2y-vLs"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="bannerView" destination="dti-PE-dy7" id="tnb-e4-JuT"/>
+                        <outlet property="buttonLoginIn" destination="Sdk-oC-6qO" id="75M-mY-UTN"/>
+                        <outlet property="buttonMyHost" destination="4y4-Wi-5c1" id="WWs-xV-Ep2"/>
+                        <outlet property="labelAuthor" destination="VZM-fq-Bhz" id="OMS-Yg-5Tv"/>
                         <outlet property="pageControl" destination="LIv-oY-mgf" id="lYL-fR-V8q"/>
                     </connections>
                 </viewController>
