--- a/SocialCommunity/SocialCommunity/Launch/Base.lproj/OpeningVC.storyboard
+++ b/SocialCommunity/SocialCommunity/Launch/Base.lproj/OpeningVC.storyboard
@@ -70,7 +70,7 @@
                                 <buttonConfiguration key="configuration" style="plain" title="LoginIn"/>
                                 <connections>
                                     <action selector="onOpenLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YrX-V5-CCd"/>
-                                    <segue destination="vQ9-h5-I0N" kind="show" id="4FA-eJ-Q6U"/>
+                                    <segue destination="b9g-n6-6hQ" kind="show" id="ttk-G5-e8V"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -128,19 +128,19 @@
             <point key="canvasLocation" x="14.503816793893129" y="3.5211267605633805"/>
         </scene>
         <!--SCLogin-->
-        <scene sceneID="DPi-P6-oez">
+        <scene sceneID="ebI-y1-iaN">
             <objects>
-                <viewControllerPlaceholder storyboardName="SCLogin" referencedIdentifier="SCLogin" id="vQ9-h5-I0N" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="Nps-kW-WLf"/>
+                <viewControllerPlaceholder storyboardName="SCLoginView" referencedIdentifier="SCLogin" id="b9g-n6-6hQ" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="g7I-K9-vws"/>
                 </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9x5-E0-dDh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ekj-PS-chj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="940" y="461"/>
+            <point key="canvasLocation" x="940" y="470"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
